--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -13,7 +13,9 @@ jobs:
       with:
         ref: main
     - name: Fetch upstream
-      run: git fetch upstream/main
+      run: |
+        git remote add upstream https://github.com/donetick/frontend
+        git fetch upstream/main
     - name: Merge upstream/main into main
       id: merge
       run: |
