--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Fetch upstream
       run: |
         git remote add upstream https://github.com/donetick/frontend
-        git fetch upstream/main
+        git fetch upstream main
     - name: Merge upstream/main into main
       id: merge
       run: |
-        git merge upstream/main
+        git merge upstream main
         if [ -z "$(git log origin/main..HEAD)" ]; then
           echo "::set-output name=new-commits::false"
         else
