--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -14,12 +14,12 @@ jobs:
         ref: main
     - name: Fetch upstream
       run: |
-        git remote add upstream https://github.com/donetick/frontend
+        git remote add upstream https://github.com/donetick/donetick.git
         git fetch upstream main
     - name: Merge upstream/main into main
       id: merge
       run: |
-        git merge upstream main
+        git merge upstream/main
         if [ -z "$(git log origin/main..HEAD)" ]; then
           echo "::set-output name=new-commits::false"
         else
