--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: main
+        fetch-depth: 0
     - name: Fetch upstream
       run: |
         git remote add upstream https://github.com/donetick/donetick.git
