--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -3,6 +3,8 @@ name: Forward Integrate
 on:
   schedule:
   - cron: '*/5 * * * *'
+  pull_request:
+    branches: [ "workflows/*" ]
 
 jobs:
   merge-main:
