--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -3,6 +3,8 @@ name: Forward Integrate
 on:
   schedule:
   - cron: '*/5 * * * *'
+  pull_request:
+    branches: [ "workflows/*" ]
 
 jobs:
   merge-main:
@@ -12,6 +14,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: main
+        fetch-depth: 0
     - name: Fetch upstream
       run: |
         git remote add upstream https://github.com/donetick/donetick.git
