--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -2,7 +2,8 @@ name: Forward Integrate
 
 on:
   schedule:
-  - cron: '*/5 * * * *'
+  - cron: '0 * * * *'
+  workflow_dispatch:
 
 jobs:
   merge-main:
