--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -68,7 +68,9 @@ jobs:
         body: 'This is an automated pull request to integrate changes from upstream/main'
 
   merge-develop:
+    needs: merge-main
     runs-on: ubuntu-latest
+    if: ${{ needs.merge-main.result == 'skipped' }}
     steps:
     - name: Checkout develop branch
       uses: actions/checkout@v2
