add output variable declaration

--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   merge-main:
     runs-on: ubuntu-latest
+    outputs:
+      new-commits: ${{ steps.merge.outputs.new-commits }}
     steps:
     - name: Checkout main branch
       uses: actions/checkout@v2
