--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Merge upstream/main into local main
       id: merge
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
@@ -76,6 +76,7 @@ jobs:
       with:
         ref: develop
         fetch-depth: 0
+        token: ${{ secrets.WORKFLOW_TOKEN }}
     - name: Check for existing automerge branches
       run: |
         if git ls-remote --heads origin | grep -q "refs/heads/automerge/main/to/develop/"; then
@@ -90,6 +91,8 @@ jobs:
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
     - name: Merge main into local develop
       id: merge
+      env:
+        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
