--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -33,7 +33,7 @@ jobs:
       id: create-branch
       run: |
         BRANCH_NAME="automerge/upstream/to/main/$(date +%Y%m%d%H%M%S)"
-        git checkout -b $BRANCH_NAME
+        git checkout -b $BRANCH_NAME origin/main
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
     - name: Merge upstream/main into local main
       id: merge
@@ -42,11 +42,11 @@ jobs:
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
-        git merge upstream/main
+        git merge upstream/main --no-edit
     - name: Check for changes
       id: check-changes
       run: |
-        if [ -z "$(git log origin/main..HEAD)" ]; then
+        if [ -z "$(git diff origin/main..HEAD)" ]; then
           echo "new-commits=false" >> $GITHUB_OUTPUT
         else
           echo "new-commits=true" >> $GITHUB_OUTPUT
@@ -54,17 +54,15 @@ jobs:
     - name: Push changes
       if: steps.check-changes.outputs.new-commits == 'true'
       run: |
-        git push origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
+        git push --force origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
     - name: Create pull request
       if: steps.check-changes.outputs.new-commits == 'true'
-      uses: peter-evans/create-pull-request@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: 'Forward integration from upstream/main'
-        branch: ${{ steps.create-branch.outputs.BRANCH_NAME }}
-        base: main
-        title: 'Forward integration from upstream/main'
-        body: 'This is an automated pull request to integrate changes from upstream/main'
+      env:
+        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        BRANCH_NAME: ${{ steps.create-branch.outputs.BRANCH_NAME }}
+      run: |
+        gh repo set-default dkhalife/donetick
+        gh pr create --base main --head $BRANCH_NAME --fill --title "[AutoMerge] FI from upstream/main to main"
 
   merge-develop:
     needs: merge-main
@@ -87,7 +85,7 @@ jobs:
       id: create-branch
       run: |
         BRANCH_NAME="automerge/main/to/develop/$(date +%Y%m%d%H%M%S)"
-        git checkout -b $BRANCH_NAME
+        git checkout -b $BRANCH_NAME origin/develop
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
     - name: Merge main into local develop
       id: merge
@@ -96,11 +94,11 @@ jobs:
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
-        git merge origin/main
+        git merge origin/main --no-edit
     - name: Check for changes
       id: check-changes
       run: |
-        if [ -z "$(git log origin/develop..HEAD)" ]; then
+        if [ -z "$(git diff origin/develop..HEAD)" ]; then
           echo "new-commits=false" >> $GITHUB_OUTPUT
         else
           echo "new-commits=true" >> $GITHUB_OUTPUT
@@ -108,14 +106,12 @@ jobs:
     - name: Push changes
       if: steps.check-changes.outputs.new-commits == 'true'
       run: |
-        git push origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
+        git push --force origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
     - name: Create pull request
       if: steps.check-changes.outputs.new-commits == 'true'
-      uses: peter-evans/create-pull-request@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: 'Forward integration from main to develop'
-        branch: ${{ steps.create-branch.outputs.BRANCH_NAME }}
-        base: develop
-        title: 'Forward integration from main to develop'
-        body: 'This is an automated pull request to integrate changes from main'
+      env:
+        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        BRANCH_NAME: ${{ steps.create-branch.outputs.BRANCH_NAME }}
+      run: |
+        gh repo set-default dkhalife/donetick
+        gh pr create --base develop --head $BRANCH_NAME --fill --title "[AutoMerge] FI from main to develop"
