--- a/.github/workflows/forward-integrate.yml
+++ b/.github/workflows/forward-integrate.yml
@@ -13,12 +13,18 @@ jobs:
     outputs:
       new-commits: ${{ steps.check-changes.outputs.new-commits }}
     steps:
+    - uses: actions/create-github-app-token@v1
+      id: app-token
+      with: 
+        app-id: ${{ vars.AUTO_MERGE_APP_ID }}
+        private-key: ${{ secrets.AUTO_MERGE_PRIVATE_KEY }}
+        owner: ${{ github.repository_owner }}
     - name: Checkout main branch
       uses: actions/checkout@v2
       with:
         ref: main
         fetch-depth: 0
-        token: ${{ secrets.WORKFLOW_TOKEN }}
+        token: ${{ steps.app-token.outputs.token }}
     - name: Check for existing automerge branches
       run: |
         if git ls-remote --heads origin | grep -q "refs/heads/automerge/upstream/to/main/"; then
@@ -38,7 +44,7 @@ jobs:
     - name: Merge upstream/main into local main
       id: merge
       env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
@@ -58,7 +64,7 @@ jobs:
     - name: Create pull request
       if: steps.check-changes.outputs.new-commits == 'true'
       env:
-        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        GH_TOKEN: ${{ steps.app-token.outputs.token }}
         BRANCH_NAME: ${{ steps.create-branch.outputs.BRANCH_NAME }}
       run: |
         gh repo set-default dkhalife/donetick
@@ -69,12 +75,18 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ needs.merge-main.outputs.new-commits == 'false' }}
     steps:
+    - uses: actions/create-github-app-token@v1
+      id: app-token
+      with: 
+        app-id: ${{ vars.AUTO_MERGE_APP_ID }}
+        private-key: ${{ secrets.AUTO_MERGE_PRIVATE_KEY }}
+        owner: ${{ github.repository_owner }}
     - name: Checkout develop branch
       uses: actions/checkout@v2
       with:
         ref: develop
         fetch-depth: 0
-        token: ${{ secrets.WORKFLOW_TOKEN }}
+        token: ${{ steps.app-token.outputs.token }}
     - name: Check for existing automerge branches
       run: |
         if git ls-remote --heads origin | grep -q "refs/heads/automerge/main/to/develop/"; then
@@ -90,7 +102,7 @@ jobs:
     - name: Merge main into local develop
       id: merge
       env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       run: |
         git config --global user.email "automerge@dkhalife.com"
         git config --global user.name "AutoMerge"
@@ -110,7 +122,7 @@ jobs:
     - name: Create pull request
       if: steps.check-changes.outputs.new-commits == 'true'
       env:
-        GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        GH_TOKEN: ${{ steps.app-token.outputs.token }}
         BRANCH_NAME: ${{ steps.create-branch.outputs.BRANCH_NAME }}
       run: |
         gh repo set-default dkhalife/donetick
