--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 services:
   app:
     build:
@@ -7,16 +5,11 @@ services:
       dockerfile: Dockerfile
     container_name: donetick-core
     restart: unless-stopped
-
     volumes:
-    # sqlite database:
-      - ./data:/usr/src/app/data
-
+    - ./data:/usr/src/app/data
     ports:
-      - "8085:8000"
+    - "8085:8000"
     environment:
-      - DT_ENV=prod
+    - DT_ENV=prod
     hostname: donetick-core
-    command: ["/donetick-core"]  # Command to execute your binary inside the container
-networks:
-  default:
+    command: ["/donetick-core"]
