--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -5,9 +5,9 @@ name: Build
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: [ "main" ]
 
 jobs:
 
