--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: donetick-core
+    container_name: task-wizard
     restart: unless-stopped
     volumes:
     - ./data:/usr/src/app/data
@@ -11,5 +11,4 @@ services:
     - "8085:8000"
     environment:
     - DT_ENV=prod
-    hostname: donetick-core
-    command: ["/donetick-core"]
+    hostname: task-wizard
