--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -23,10 +23,10 @@ jobs:
           ref: ${{ vars.FRONTEND_REF }}
           path: 'frontend-code'
       # build frontend 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 22.x
       - name: Install Dependencies
         run: |
           cd frontend-code
