switch default overdue frequency to 24h

--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -16,7 +16,7 @@ server:
   debug: false
 scheduler_jobs:
   due_frequency: 5m
-  overdue_frequency: 1d
+  overdue_frequency: 24h
 email:
   host: 
   port: 
