--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,6 +34,10 @@ archives:
     dst: "config/debug.yaml"
   - src: "config/prod.yaml"
     dst: "config/prod.yaml"
+
+release:
+  prerelease: true
+
 changelog:
   sort: asc
   filters:
