add a registration toggle

--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -14,6 +14,7 @@ server:
   rate_period: 60s
   rate_limit: 300
   serve_frontend: true
+  registration: true
   debug: false
 scheduler_jobs:
   due_frequency: 5m
