--- a/config/debug.yaml
+++ b/config/debug.yaml
@@ -14,6 +14,7 @@ server:
   rate_period: 60s
   rate_limit: 300
   serve_frontend: false
+  registration: true
   debug: true
 scheduler_jobs:
   due_frequency: 5s
