Require activation for new accounts (#80)
* rework email util

* switch packages

* activation email

* email sending should be async

* add a registration toggle

* url encode the codes

* activation api

--- a/config/debug.yaml
+++ b/config/debug.yaml
@@ -7,12 +7,14 @@ jwt:
   session_time: 168h
   max_refresh: 168h
 server:
+  host_name: localhost
   port: 2021
   read_timeout: 2s
   write_timeout: 1s
   rate_period: 60s
   rate_limit: 300
   serve_frontend: false
+  registration: true
   debug: true
 scheduler_jobs:
   due_frequency: 5s
@@ -21,6 +23,5 @@ scheduler_jobs:
 email:
   host: 
   port: 
-  key: 
   email:  
-  appHost:  
+  password:
