set backend version when building frontend

--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build Frontend
         run: |
           cd frontend-code
+          export VITE_BACKEND_VERSION=$(git tag --sort=-creatordate | sed -n '1p' | sed 's/^v//')
           yarn build
 
       - name: Copy Frontend
