--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -1,26 +1,26 @@
-name: "prod"
 database:
   migration: true
-  path: /config/task-wizard.db
+  path: task-wizard.db
 jwt:
   secret: "secret"
   session_time: 168h
   max_refresh: 168h
 server:
-  host_name: example.com
+  host_name: localhost
   port: 2021
   read_timeout: 2s
   write_timeout: 1s
   rate_period: 60s
   rate_limit: 300
-  serve_frontend: true
+  serve_frontend: false
   registration: true
-  debug: false
+  debug: true
+  log_level: "debug"
 scheduler_jobs:
-  due_frequency: 5m
-  overdue_frequency: 24h
-  password_reset_validity: 24h
-  token_expiration_reminder: 72h
+  due_frequency: 1m
+  overdue_frequency: 1m
+  password_reset_validity: 1m
+  token_expiration_reminder: 1m
 email:
   host: 
   port: 
