--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -32,3 +32,12 @@ jobs:
 
     - name: Lint
       run: golangci-lint run
+
+    - name: Run Tests and Generate Coverage
+      run: go test -v -coverprofile=coverage.out ./...
+
+    - name: Publish Coverage Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage.out
