Add some tests to get started (#104)

--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -32,3 +32,6 @@ jobs:
 
     - name: Lint
       run: golangci-lint run
+
+    - name: Run Tests and Generate Coverage
+      run: go test -v -coverprofile=coverage.out ./...
