--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -35,3 +35,9 @@ jobs:
 
     - name: Run Tests and Generate Coverage
       run: go test -v -coverprofile=coverage.out ./...
+
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage.out
