chore(ci): set stable environment for release

--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: stable
     name: Build and Push Docker Image
     steps:
       - name: Checkout Code
