Check websocket origin

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,6 +15,8 @@ server:
   serve_frontend: true
   registration: true
   log_level: "warn"
+  allowed_origins:
+    - "https://example.com"
 scheduler_jobs:
   due_frequency: 5m
   overdue_frequency: 24h
