--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -15,6 +15,8 @@ server:
   serve_frontend: false
   registration: true
   log_level: "debug"
+  allowed_origins:
+    - "http://localhost:5173"
 scheduler_jobs:
   due_frequency: 1m
   overdue_frequency: 1m
