change setting name

--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -17,7 +17,7 @@ server:
   log_level: "debug"
   allowed_origins:
     - http://localhost:5173
-  allow_credentials: true
+  allow_cors_credentials: true
 scheduler_jobs:
   due_frequency: 1m
   overdue_frequency: 1m
