--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -101,16 +101,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f7ce87c1d6bead3e36075b2ce75da1f6cc28aaca #v3.9.0
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 #v3.3.0
+      - name: Azure Login with OIDC
+        uses: azure/login@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Log in to Azure Container Registry
+        run: az acr login --name ${{ secrets.ACR_NAME }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 #v6.13.0
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/task-wizard:latest, ${{ secrets.DOCKER_USERNAME }}/task-wizard:${{ github.ref_name }}
+          tags: ${{ secrets.ACR_NAME }}.azurecr.io/task-wizard:latest, ${{ secrets.ACR_NAME }}.azurecr.io/task-wizard:${{ github.ref_name }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
