--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         GH_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
       run: |
         gh repo set-default dkhalife/tasks-backend
-        latest_tag=$(gh release view --json tagName -q .tagName)
+        latest_tag=$(gh release list --limit 1 --json tagName -q '.[0].tagName')
         echo "::set-output name=latest_tag::$latest_tag"
     - name: Bump version
       id: bump_version
