--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -102,7 +102,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean --skip=validate --prerelease
+          args: release --clean --skip=validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
