--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -85,6 +85,16 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
 
+      - name: Checkout Frontend
+        uses: actions/checkout@v4
+        with:
+          repository: '${{ vars.FRONTEND_REPO }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ vars.FRONTEND_REF }}
+          path: 'frontend-code'
+          fetch-depth: 0
+          fetch-tags: true
+
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
