--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -150,6 +150,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f7ce87c1d6bead3e36075b2ce75da1f6cc28aaca #v3.9.0
+        with:
+          build-args: |
+            RELEASE_TAG=${{github.ref_name}}
 
       - name: Azure Login with OIDC
         uses: azure/login@v1
