--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -161,13 +161,15 @@ jobs:
       - name: Log in to Azure Container Registry
         run: az acr login --name ${{ secrets.ACR_NAME }}
 
-      - name: Push tags
+      - name: Build and push tags
         uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 #v6.13.0
         with:
           context: .
           push: true
           tags: ${{ secrets.ACR_NAME }}.azurecr.io/task-wizard:canary, ${{ secrets.ACR_NAME }}.azurecr.io/task-wizard:${{ github.ref_name }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+          build-args: |
+            RELEASE_TAG=${{github.ref_name}}
 
   release-production:
     runs-on: ubuntu-latest
