--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -25,36 +25,23 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
-    - name: Build (TSC)
-      run: yarn tsc
-    - name: Build (Vite)
-      run: yarn build
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 22
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
-        cache: 'npm'
-    - name: Install dependencies
-      run: yarn install --frozen-lockfile
-    - run: yarn lint
-  e2e-tests:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 22
-      uses: actions/setup-node@v4
-      with:
-        node-version: 22
-        cache: 'npm'
-    - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: |
+        cd frontend
+        yarn install --frozen-lockfile
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
+    - name: Lint
+      run: |
+        cd frontend
+        yarn lint
+    - name: Build (TSC)
+      run: |
+        cd frontend
+        yarn tsc
+    - name: Build (Vite)
+      run: |
+        cd frontend
+        yarn build
     - name: Run Playwright tests
       run: yarn test:e2e
     - uses: actions/upload-artifact@v4
